force-app/main/default/objects/Delivery_Group__c/Delivery_Group__c.object-meta.xml
<CustomObject>
    <label>Delivery Plan</label>
    <nameField>
        <displayFormat>DLV - {0000}</displayFormat>
        <label>Delivery Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>