force-app/main/default/objects/Delivery_Group__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Groups</relationshipLabel>
    <relationshipName>Delivery_Plans_Account</relationshipName>
    <type>Lookup</type>
</CustomField>