force-app/main/default/objects/Delivery_Group__c/fields/Choose_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Choose_Vehicle__c</fullName>
    <label>Choose Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOLERO</fullName>
            </value>
            <value>
                <fullName>DHOSTH</fullName>
            </value>
            <value>
                <fullName>NISSAN</fullName>
            </value>
            <value>
                <fullName>BENZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>