force-app/main/default/objects/Delivery_Group__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Plans</relationshipLabel>
    <relationshipName>Delivery_Plans_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>