force-app/main/default/objects/Delivery_Group__c/fields/Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Time__c</fullName>
    <label>Delivery Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>