force-app/main/default/objects/Delivery_Group__c/fields/Delivery_Id_SAP__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Id_SAP__c</fullName>
    <externalId>true</externalId>
    <label>Delivery Id (SAP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>