force-app/main/default/objects/Delivery_Group__c/fields/Delivery_Place__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Place__c</fullName>
    <label>Delivery Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>