force-app/main/default/objects/Delivery_Group__c/fields/Delivery_Priority__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Priority__c</fullName>
    <label>Delivery Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>