force-app/main/default/objects/Delivery_Group__c/fields/Delivery_Summary_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Summary_Note__c</fullName>
    <label>Delivery Summary Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>