force-app/main/default/objects/Delivery_Group__c/fields/Driver_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assigned__c</fullName>
    <label>Driver Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASHRAF</fullName>
            </value>
            <value>
                <fullName>BASHEER K</fullName>
            </value>
            <value>
                <fullName>BASHEER N</fullName>
            </value>
            <value>
                <fullName>RAJEESH</fullName>
            </value>
            <value>
                <fullName>RAJEES P</fullName>
            </value>
            <value>
                <fullName>GIREESH</fullName>
            </value>
            <value>
                <fullName>VICTOR</fullName>
            </value>
            <value>
                <fullName>MK BASHEER</fullName>
            </value>
            <value>
                <fullName>SHABEER</fullName>
            </value>
            <value>
                <fullName>ANAS</fullName>
            </value>
            <value>
                <fullName>SUDHEER</fullName>
            </value>
            <value>
                <fullName>PRADEEP</fullName>
            </value>
            <value>
                <fullName>BINU</fullName>
            </value>
            <value>
                <fullName>SHIBU</fullName>
            </value>
            <value>
                <fullName>JIDESH</fullName>
            </value>
            <value>
                <fullName>RATHEESH</fullName>
            </value>
            <value>
                <fullName>SIVADAS</fullName>
            </value>
            <value>
                <fullName>NO DRIVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>