force-app/main/default/objects/Delivery_Group__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <formula>CASESAFEID( Sales_Order__r.QuoteId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteId</label>
    <type>Text</type>
</CustomField>