force-app/main/default/objects/Delivery_Group__c/fields/Sales_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Confirmation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Confirmation</label>
    <referenceTo>Sales_Confirmation__c</referenceTo>
    <relationshipName>Delivery_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>