force-app/main/default/objects/Delivery_Group__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Delivery Plans</relationshipLabel>
    <relationshipName>Delivery_Plans_DP</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>