force-app/main/default/objects/Delivery_Group__c/fields/Total_Km__c.field-meta.xml
<CustomField>
    <fullName>Total_Km__c</fullName>
    <label>Total Km</label>
    <length>255</length>
    <type>Text</type>
</CustomField>