force-app/main/default/objects/Delivery_Group__c/fields/Unloading_Charges__c.field-meta.xml
<CustomField>
    <fullName>Unloading_Charges__c</fullName>
    <label>Unloading Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>