force-app/main/default/objects/Delivery_Group__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <label>Vehicle Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Choose_Vehicle__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KL 11 AV 5223</fullName>
            </value>
            <value>
                <fullName>KL 11 AQ 805</fullName>
            </value>
            <value>
                <fullName>KL 11 AM 949</fullName>
            </value>
            <value>
                <fullName>KL 11 AS 7257</fullName>
            </value>
            <value>
                <fullName>KL 11 BD 3166</fullName>
            </value>
            <value>
                <fullName>KL 11 BD 3866</fullName>
            </value>
            <value>
                <fullName>KL 11 AC 7775</fullName>
            </value>
            <value>
                <fullName>KL 11 Y 714</fullName>
            </value>
            <value>
                <fullName>KL 11Z 9884</fullName>
            </value>
            <value>
                <fullName>KL 11 AA 2757</fullName>
            </value>
            <value>
                <fullName>KL 11 AA 5504</fullName>
            </value>
            <value>
                <fullName>KL 11 AH 5550</fullName>
            </value>
            <value>
                <fullName>KL 11 AH 5563</fullName>
            </value>
            <value>
                <fullName>KL 11 AY 7607</fullName>
            </value>
            <value>
                <fullName>KL 11 AY 7709</fullName>
            </value>
            <value>
                <fullName>KL11CB2632</fullName>
            </value>
            <value>
                <fullName>KL11CB2634</fullName>
            </value>
            <value>
                <fullName>KL11 BL 5396</fullName>
            </value>
            <value>
                <fullName>KL11 BT 6859</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>