force-app/main/default/objects/Delivery_Group__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Delivery Plans</relationshipLabel>
    <relationshipName>Delivery_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>