force-app/main/default/objects/Delivery_Group__c/fields/Warehouse_Manager__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>