force-app/main/default/objects/Delivery_Group__c/recordTypes/Delivery_Plan.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Plan</fullName>
    <active>true</active>
    <label>Delivery Plan</label>
</RecordType>