force-app/main/default/objects/Delivery_Group__c/validationRules/Require_Warehouse_And_Manager_Before_App.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Warehouse_And_Manager_Before_App</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Approval_Status__c, &quot;Submitted&quot;),
  OR(
    ISBLANK(Warehouse__c),
    ISBLANK(Warehouse_Manager__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Warehouse_Manager__c</errorDisplayField>
    <errorMessage>Please select Warehouse and Warehouse Manager before submitting for approval.</errorMessage>
</ValidationRule>