force-app/main/default/objects/Delivery_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Delivery_Status__c</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Delivery_Address__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Delivery_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>