force-app/main/default/objects/Delivery_Group__c/listViews/Todays.listView-meta.xml
<ListView>
    <fullName>Todays</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays</label>
</ListView>